@@ -1,3 +1,6 @@
+10 Apr 2010
+	* fix XSetClipOrigin to offset current gc clip region also
+	* load linux kernel keymap when XRefreshKeyboardMapping called (Aron Takacs)
 21 Mar 2010
 	* fix multiple free() bug in _nxFreeFontDir()
 	* added Xutf8SetWMProperties for mupdf port
